--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ribbet</title>
+  <title>Ribbet (A P2PU Introduction to Ruby and Rails App)</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
+<div id="user_nav">
+    <% if user_signed_in? %>
+      Signed in as <%= current_user.email %>.  
+      (Not you? <%= link_to "Sign out", destroy_user_session_path %>)
+    <% end %>
+</div>
 
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+       
 <%= yield %>
 
 </body>
