--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,15 +1,13 @@
-<h2>Sign up</h2>
+<h2>Please Sign Up:</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <p><%= f.label :email %><br />
-  <%= f.text_field :email %></p>
-
-  <p><%= f.label :password %><br />
-  <%= f.password_field :password %></p>
-
-  <p><%= f.label :password_confirmation %><br />
+  <%= f.text_field :email %><br />
+  <%= f.label :password %><br />
+  <%= f.password_field :password %><br />
+  <%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></p>
 
   <p><%= f.submit "Sign up" %></p>
