--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,11 +1,11 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Sign in", new_session_path(resource_name) %><br />
+  <div class="userinfo">Already registered? <%= link_to "Sign in", new_session_path(resource_name) %></div>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <div class="userinfo">Not yet registered? <%= link_to "Sign up", new_registration_path(resource_name) %></div>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <div class="userinfo"><%= link_to "Forgot your password?", new_password_path(resource_name) %></div>
 <% end -%>
