--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,10 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Ribbit!</p>
 
-<p>Someone has requested a link to change your password, and you can do this through the link below.</p>
+<p>Someone has requested a link to change the password for <i><%= @resource.email %></i>, and you can do this through the following link:</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+<p><%= link_to edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
 <p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Your password won't change until you access the link above and create a new one.</p> 
+
+<p>Thank you from <i><%= link_to 'Ribbit!', root_url %></i></p>
