Email CSS and image attachment.

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,3 +1,10 @@
+<style type="text/css">
+p { font-family: verdana, arial, helvetica, sans-serif; }
+a { color: #080; }
+a:visited { color: #7b7; }
+a:hover { color: #0f0; } 
+</style>
+
 <p>Ribbit!</p>
 
 <p>Someone has requested a link to change the password for <i><%= @resource.email %></i>, and you can do this through the following link:</p>
@@ -7,4 +14,5 @@
 <p>If you didn't request this, please ignore this email.</p>
 <p>Your password won't change until you access the link above and create a new one.</p> 
 
-<p>Thank you from <i><%= link_to 'Ribbit!', root_url %></i></p>
+<p>Thank you from <i><%= link_to 'Ribbit!', root_url %></i>
+<br><%= image_tag('jumpingfrog.gif') %></p>
