Removing original view as I'm overriding the mailer now.

--- a/app/views/mailer/reset_password_instructions.html.erb
+++ b/app/views/mailer/reset_password_instructions.html.erb
@@ -5,7 +5,7 @@ a:visited { color: #7b7; }
 a:hover { color: #0f0; } 
 </style>
 
-<p>Ribbit!!</p>
+<p>Ribbit!</p>
 
 <p>Someone has requested a link to change the password for <i><%= @resource.email %></i>, and you can do this through the following link:</p>
 
