--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
+<div id="logo">
+    <%= link_to image_tag("jumpingfrog.gif", :border =>"0"), root_path %>
+</div>
 <div id="header">
     <div id="title">Ribbit!</div>
     <div id="subtitle">Links at a Leap!</div>
