--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -20,12 +20,20 @@ div.field, div.actions {
   margin-bottom: 10px;
 }
 
-#header {
-  background-image: url("/images/jumpingfrog.gif");
-  background-repeat: no-repeat;
-  background-position: top left;
+#logo {
+  float: left;
   height: 64px;
-  padding-left: 50px;
+}
+
+#logo a {
+  outline: none;
+}
+
+#header {
+  display: inline-block;
+  height: 64px;
+  padding-left: 5px;    
+  padding-top: 5px;    
 }
 
 #title {
