--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing link</h1>
+<h2>Edit a Link</h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @link %> |
 <%= link_to 'Back', links_path %>
