--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,9 +1,9 @@
 <%- if controller_name != 'sessions' %>
-  <div class="userinfo">Already registered? <%= link_to "Sign in", new_session_path(resource_name) %></div>
+  <div class="userinfo">Already registered? <%= link_to "Sign In", new_session_path(resource_name) %></div>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <div class="userinfo">Not yet registered? <%= link_to "Sign up", new_registration_path(resource_name) %></div>
+  <div class="userinfo">Not yet registered? <%= link_to "Sign Up", new_registration_path(resource_name) %></div>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
