Adding upvote logic, although this is not yet working correctly.  Sorting of list by most votes.  Some slight UI adjustments as well.

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -60,11 +60,14 @@ div.field, div.actions {
 #votecount {
   font-size: 18px;
   color: GrayText;    
-  padding-top: 12px;    
+  padding-top: 12px;
+  padding-right: 3px;
+  float: right;    
 }
 
 #thumbsup {
-  padding-top: 4px;    
+  padding-top: 4px;
+  padding-right: 3px;    
 }
 
 #thumbsup a,
