--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,7 @@
     </div>
 </div>
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<p><span class="notice"><%= notice %>&nbsp;</span><span class="alert"><%= alert %>&nbsp;</span></p>
        
 <%= yield %>
 
