--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -5,7 +5,7 @@
 <% @links.each do |link| %>
   <tr valign="top">
     <td><div id="votecount"><%= votecount(link) %></div></td>
-    <td><div id="thumbsup"><%= image_tag("thumbsup.gif", :border =>"0") %></div><div id="thumbsdown"><%= image_tag("thumbsdown.gif", :border =>"0") %></div></td>
+    <td><div id="thumbsup"><%= link_to image_tag("thumbsup.gif", :border =>"0", :alt =>"Vote for this link", :title =>"Vote for this link"), upvote_link_path(link), :method => :put %></div><div id="thumbsdown"><%= image_tag("thumbsdown.gif", :border =>"0", :alt =>"Vote against this link", :title =>"Vote against this link") %></div></td>
     <td><div id="linkto" class="dotdotdot"><%= link_to link.title, link.url, :target => "_blank" %><br/></div>
     <div id="description"><%= link.description %><br/></div>
     <div id="submittedby">Submitted <%= link.created_at.strftime("%e-%b-%Y at %I:%M%P %Z") %> by <i><%= link.user.email %></i>
