--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -10,12 +10,12 @@
     <td><div id="thumbsup"><%= link_to image_tag("thumbsup.gif", :border =>"0", :alt =>"Vote for this link", :title =>"Vote for this link"), upvote_link_path(link), :method => :put %></div><div id="thumbsdown"><%= link_to image_tag("thumbsdown.gif", :border =>"0", :alt =>"Vote against this link", :title =>"Vote against this link"), downvote_link_path(link), :method => :put %></div></td>
     <td><div id="linkto" class="dotdotdot"><%= link_to link.title, link.url, :target => "_blank" %><br/></div>
     <div id="description"><%= link.description %><br/></div>
-    <div id="submittedby">Submitted <%= link.created_at.strftime("%e-%b-%Y at %I:%M%P %Z") %> by <i><%= link.user.email %></i>
+    <div id="submittedby">Submitted <%= link.created_at.strftime("%e-%b-%Y at %I:%M%P %Z") %> by <i><%= link.email %></i>
     <% if link.created_at != link.updated_at %>
         <br/>&nbsp;&nbsp; <%= link.updated_at.strftime("Updated %e-%b-%Y at %I:%M%P %Z") %>
     <% end %>
     </div></td>
-    <% if current_user.email == link.user.email %>
+    <% if current_user.email == link.email %>
       <td><div id="imagebutton"><%= link_to image_tag("edit.gif", :border =>"0", :alt =>"Edit", :title =>"Edit"), edit_link_path(link) %></div></td>
       <td><div id="imagebutton"><%= link_to image_tag("trashcan.gif", :border =>"0", :alt =>"Delete", :title =>"Delete"), link, :confirm => "Are you sure you really want to delete this link?", :method => :delete %></div></td>
     <% end %>
