--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,24 +7,25 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-<div id="logo">
-    <%= link_to image_tag("jumpingfrog.gif", :border =>"0"), root_path %>
-</div>
-<div id="header">
-    <div id="title">Ribbit!</div>
-    <div id="subtitle">Links at a Leap!</div>
-    <div class="userinfo">
-        <% if user_signed_in? %>
-          You're signed in as <i><%= link_to current_user.email, edit_user_registration_path %></i>.  
-          &nbsp;<span class="smallprint">(<%= link_to "Sign Out", destroy_user_session_path %> / 
-          <%= link_to "Delete Account", registration_path(current_user), :confirm => "Are you sure you really want to delete your account?", :method => :delete %>)</span>
-        <% end %>
+<div id="app">
+    <div id="logo">
+        <%= link_to image_tag("jumpingfrog.gif", :border =>"0"), root_path %>
     </div>
+    <div id="header">
+        <div id="title">Ribbit!</div>
+        <div id="subtitle">Links at a Leap!</div>
+        <div class="userinfo">
+            <% if user_signed_in? %>
+              You're signed in as <i><%= link_to current_user.email, edit_user_registration_path %></i>.  
+              &nbsp;<span class="smallprint">(<%= link_to "Sign Out", destroy_user_session_path %> / 
+              <%= link_to "Delete Account", registration_path(current_user), :confirm => "Are you sure you really want to delete your account?", :method => :delete %>)</span>
+            <% end %>
+        </div>
+    </div>
+
+    <p><span class="notice"><%= notice %>&nbsp;</span><span class="alert"><%= alert %>&nbsp;</span></p>
+           
+    <%= yield %>
 </div>
-
-<p><span class="notice"><%= notice %>&nbsp;</span><span class="alert"><%= alert %>&nbsp;</span></p>
-       
-<%= yield %>
-
 </body>
 </html>
