--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -64,9 +64,8 @@ div.field, div.actions {
 }
 
 .linktable {
-  margin-left: 20px;
-  float: right;
-  width: 590px;
+  border: 1px solid #7b7; 
+  padding-left: 20px;
 }
 
 #votecount {
@@ -103,6 +102,12 @@ div.field, div.actions {
   line-height: 10px;
   padding-top: 5px;
   padding-bottom: 10px;
+}
+
+#accountsinfo {
+  font-style: italic;
+  font-size: 10px;
+  float: right;    
 }
 
 .userinfo {
