Corrected active accounts info.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         </div>
     </div>
     <% if Link.all.count > 1 %>
-        <div id="accountsinfo">There are <%= Link.all.count %> active accounts</div>
+        <div id="accountsinfo">There are <%= User.all.count %> active accounts</div>
     <% end %>
 
     <p><span class="notice"><%= notice %>&nbsp;</span><span class="alert"><%= alert %>&nbsp;</span></p>
