Refactored some very minor things, great job Dan.

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,5 +1,5 @@
 
-<% if @links.count == 0 %>
+<% if @links.empty? %>
 <p>No links have been submitted.  Click the link below to add one.</p>
 <% else %>
 <h2>Submitted Links</h2>
